--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             <button>Vamos começar!</button>
         </div>
     </div>
-    <
+    <script src="script.js"></script>
  </body>   
 </html>
